fix spacing wip

--- a/src/App.scss
+++ b/src/App.scss
@@ -123,9 +123,10 @@ body {
 .hero-wrapper {
   position: relative;
   width: 100vw;
-  height: 100vh;
-  height: -webkit-fill-available;
-  // overflow: hidden;
+  min-height: max-content;
+  max-height: 100vh;
+  max-height: -webkit-fill-available;
+  overflow: hidden;
 }
 
 .observer-blobs {
